added the users, patient, audit logs api
